update billing environment properties

--- a/env/application-billing.properties
+++ b/env/application-billing.properties
@@ -16,4 +16,4 @@ jdbc.user=adedotun
 jdbc.pass=password
 
 blusalt.customer.secret.key=blusalt____qdljclkeinplvkey
-blusalt.customer.base.url=http://localhost:8889
+blusalt.customer.base.url=http://customer-service:8889
